# gmail_llm_summaries

./: .gitignore  pyproject.toml
email_vectorstore/: chroma.sqlite3
src/gmail_llm_summaries/: __init__.py  auth.py  get_emails.py  get_starred_emails.py  llm.py  oldcode.py  starred_summarizer.py
